add filter to pokemons

--- a/index.html
+++ b/index.html
@@ -18,6 +18,13 @@
 
     <section class="pokemons-container">
         <h1>Lista de Pokemones:</h1>
+        <form id="search-filter">
+            <h2>Filtros:</h2>
+            <input type="text" id="filter-input" name="filter-name" placeholder="ejm. Pikachu, Charizard, Charmaleon...">
+            <select name="filter-type" id="filter-select">
+                <option value=""></option>
+            </select>
+        </form>
         <ul class="list-pokemons" id="list-pokemons">
             
         </ul>
