add filter by name

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
     <section class="pokemons-container">
         <h1>Lista de Pokemones:</h1>
-        <form id="search-filter">
+        <form id="filter-form">
             <h2>Filtros:</h2>
             <input type="text" id="filter-input" name="filter-name" placeholder="ejm. Pikachu, Charizard, Charmaleon...">
             <select name="filter-type" id="filter-select">
