add filter type/name

--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
         <h1>Lista de Pokemones:</h1>
         <form id="filter-form">
             <h2>Filtros:</h2>
-            <input type="text" id="filter-input" name="filter-name" placeholder="ejm. Pikachu, Charizard, Charmaleon...">
-            <select name="filter-type" id="filter-select">
+            <input type="text" id="filter-input" name="filterName" placeholder="ejm. Pikachu, Charizard, Charmaleon...">
+            <select name="filterType" id="filter-select">
                 <option value=""></option>
             </select>
         </form>
