fix bug when filter by type

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             <h2>Filtros:</h2>
             <input type="text" id="filter-input" name="filterName" placeholder="ejm. Pikachu, Charizard, Charmaleon...">
             <select name="filterType" id="filter-select">
-                <option value=""></option>
+                <option></option>
             </select>
         </form>
         <ul class="list-pokemons" id="list-pokemons">
